<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Spinner
        android:id="@+id/spinner"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:entries="@array/Cities"
        android:textAlignment="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="match_parent" />

    <CheckBox
        android:id="@+id/checkBox_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:checked="true"
        android:text="@string/checkBox_wind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <CheckBox
        android:id="@+id/checkBox_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/checkBox_humidity"
        app:layout_constraintStart_toStartOf="@+id/checkBox_wind"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_wind" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settingsText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dark_theme"
        app:layout_constraintStart_toStartOf="@+id/checkBox_humidity"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_humidity" />
</androidx.constraintlayout.widget.ConstraintLayout>